# Glock-Agent

./: .env.example  .gitignore  =1.20.0  ARCH.md  DEPLOY.md  README.md  USERS.md  deploy.sh  docker-compose.yml  error.txt  glock-architecture-diagram.md  package.json  pyproject.toml  railway.toml  requirements.txt  run.sh
apps/: __init__.py
apps/cli/: __init__.py  pyproject.toml
apps/cli/src/: __init__.py
apps/cli/src/agents/: __init__.py  base.py  config.py  registry.py  runner.py  session.py
apps/cli/src/agents/prompts/: bash.md  explore.md  general_purpose.md  plan.md
apps/cli/src/capsule/: __init__.py  docker.py  factory.py  manager.py  policy.py  process.py
apps/cli/src/cicd/: __init__.py
apps/cli/src/cli/: __init__.py  __main__.py  main.py
apps/cli/src/config/: __init__.py  hierarchy.py  modes.py  project_config.py
apps/cli/src/context/: __init__.py  budget.py  compressor.py  delta.py  facts.py  packer.py  slicer.py  summary.py  tokenizer.py
apps/cli/src/crypto/: __init__.py  session_keys.py
apps/cli/src/debugger/: __init__.py
apps/cli/src/errors/: __init__.py  handler.py
apps/cli/src/hooks/: __init__.py  config.py  executor.py  manager.py
apps/cli/src/index/: __init__.py  code_graph.py
apps/cli/src/mcp/: __init__.py  client.py  discovery.py  tools.py
apps/cli/src/memory/: __init__.py  embeddings.py  store.py
apps/cli/src/orchestrator/: __init__.py  council_integration.py  engine.py  parallel_executor.py  preflight.py  retry.py  sub_agent.py  tracing.py
apps/cli/src/plan/: __init__.py  enforcer.py  verifier.py
apps/cli/src/planning/: __init__.py  files.py  mode.py
apps/cli/src/runtime/: __init__.py  context.py  loop.py
apps/cli/src/security/: __init__.py  dependency_scanner.py  scanner.py
apps/cli/src/session/: __init__.py  host.py  state.py
apps/cli/src/skills/: __init__.py  base.py  composer.py  loader.py  registry.py
apps/cli/src/skills/builtin/: __init__.py  commit.py  create_pr.py  remember.py  review.py  review_pr.py  security_scan.py
apps/cli/src/storage/: __init__.py  local.py
apps/cli/src/tasks/: __init__.py  background.py  manager.py  models.py  store.py
apps/cli/src/tools/: __init__.py  broker.py  database.py  formatter.py  profiler.py  test_executor.py  web_search.py
apps/cli/src/tools/agent_tools/: __init__.py  handlers.py
apps/cli/src/tools/git/: __init__.py  handlers.py  safety.py
apps/cli/src/tools/hook_tools/: __init__.py  handlers.py
apps/cli/src/tools/mcp_tools/: __init__.py  handlers.py
apps/cli/src/tools/plan_tools/: __init__.py  handlers.py
apps/cli/src/tools/skill_tools/: __init__.py  handlers.py
apps/cli/src/transport/: __init__.py  replay_buffer.py  ws_client.py
apps/cli/src/tui/: __init__.py  app.py  components.py
apps/cli/src/validation/: __init__.py  runner.py
apps/server/: __init__.py  pyproject.toml
apps/server/src/: __init__.py  main.py
apps/server/src/config/: __init__.py  llm_config.py  system_prompt.py
apps/server/src/context/: __init__.py  rehydrator.py
apps/server/src/errors/: __init__.py  handler.py
apps/server/src/gateway/: __init__.py  protocol.py
apps/server/src/healer/: __init__.py  parser.py  worker.py
apps/server/src/metering/: __init__.py  events.py  worker.py
apps/server/src/planner/: __init__.py  analyzer.py  compiler.py  memory.py  orchestrator.py  router.py  signer.py
apps/server/src/storage/: __init__.py  checkpoint_store.py  postgres.py  redis.py
(+115 files in other folders)
