[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glock"
version = "1.0.0"
description = "AI coding assistant with client-orchestrated architecture (Model B)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Glock Team" }
]
keywords = ["ai", "coding", "assistant", "cli", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "litellm>=1.20.0",
]
cli = [
    "textual>=0.47.0",
    "prompt-toolkit>=3.0.0",
    "pygments>=2.17.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
all = [
    "glock[server,cli,dev]",
]

[project.scripts]
glock = "glock.cli.main:main"

[project.urls]
Homepage = "https://glock.dev"
Repository = "https://github.com/glock/glock"

[tool.hatch.build.targets.wheel]
packages = ["apps/cli/src", "apps/server/src", "packages/shared-protocol"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apps", "packages"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
