[project]
name = "glock-cli"
version = "1.0.0"
description = "Glock CLI - AI Coding Assistant"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "prompt-toolkit>=3.0.0",
    "pygments>=2.17.0",
]

[project.scripts]
glock = "src.cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
